# tidal-maxmsp

./: README.md  tidal-maxmsp.maxproj
Tidal-MaxMsp/: tidal-maxmsp.maxproj
Tidal-MaxMsp/other/: MaxMspOsc.dyn_o  MaxMspOsc.haddock  MaxMspOsc.hs  MaxMspOsc.p_o  mini_Sound-Tidal-MaxMspOsc.html
Tidal-MaxMsp/patchers/: tidal-maxmsp.maxpat  tidal-osc-parse.maxpat
other/: MaxMspOsc-0.1.0.0-CK6siUG6FC5HHsg7Bo0rkH.conf  MaxMspOsc.dyn_hi  Sound-Tidal-MaxMspOsc.html  cabal_macros.h  doc-index.html  package.cache  setup-config
patchers/: tidal-maxmsp.maxpat
tidal/: tidal-maxmsp-example.tidal
tidal/MaxMspOsc/: MaxMspOsc.cabal  README.md
