name:                MaxMspOsc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/MaxMspOsc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sound.Tidal.MaxMspOsc
  build-depends:       base >= 4.7 && < 5, tidal
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/MaxMspOsc
